<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_name">Поиск</string>
    <string name="media_name">Медиатека</string>
    <string name="confguration_name">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="media_text">Прищельцы украли реализацию кнопки</string>
    <string name="search_text">Идут ремонтные работы...</string>
    <string name="share_app">https://practicum.yandex.ru/android-developer</string>
    <string name="share_app_header">Делюсь приложением</string>
    <string name="helpMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="helpTopic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail">rik.a1@yandex.ru</string>
    <string name="userAgreement">https://yandex.ru/legal/practicum_offer</string>
    <string name="searchHint">Поиск</string>
    <string name="trackName">Track Name</string>
    <string name="trackTime">Track Time</string>
    <string name="trackAuthor">Artist Name</string>
    <string name="noResultText">Ничего не нашлось</string>
    <string name="errorMessage1">\t\ \t\ \t\ \t\ \t\ \t\ Проблемы со связью \n\ \n\Загрузка не удалась.  Проверьте \n\  \t\ \t\ подключение к интернету</string>
    <string name="errorMessage2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="history_line">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="albumName">Album Name</string>
    <string name="year">Год</string>
    <string name="yearName">Year Name</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="genreName">Genre Name</string>
    <string name="countryName">Country Name</string>
    <string name="TrackName">Track Name</string>
    <string name="songTime">0:30</string>
</resources>