<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        style = "@style/BackButtonColor"
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@id/trackImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        android:layout_marginTop="24dp"
        />


    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:layout_marginTop="36dp"
        />

    <TextView
        style="@style/TrackNameStyleLarge"
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trackName"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackImage"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/artistName"
        style="@style/TrackInformationStylePlayer"
        android:text="@string/trackAuthor"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        android:layout_marginTop="12dp"
        />
    <ImageView
        style="@style/PlayStyle"
        android:id="@+id/play_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/artistName"
        android:layout_marginTop="30dp"
        />

    <ImageView
        style="@style/PlusStyle"
        android:id="@+id/add_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/artistName"
        android:layout_marginTop="54dp"
        />

    <ImageView
        style="@style/LikeStyle"
        android:id="@+id/like_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/artistName"
        android:layout_marginTop="54dp"
        />
    <TextView
        style="@style/SongTime"
        android:id="@+id/songTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songTime"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/play_icon"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        android:layout_marginTop="8dp"
        />

    <TextView
        style="@style/TextViewStyleGray"
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/add_icon"
        android:layout_marginTop="75dp"
        />
    <TextView
        style="@style/TrackInformationStyleBlack"
        android:id="@+id/trackTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trackTime"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/like_icon"
        android:layout_marginTop="75dp"
        />
    <TextView
        style="@style/TextViewStyleGray"
        android:id="@+id/album"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/album"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/duration"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:ellipsize="start"
        />
    <TextView
        style="@style/TrackInformationStyleBlack"
        android:id="@+id/albumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:text="@string/albumName"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/trackTime"
        app:layout_constraintLeft_toRightOf="@id/album"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:visibility="gone"
        android:textAlignment="textEnd"
        />

    <TextView
        style="@style/TextViewStyleGray"
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album"
        android:layout_marginTop="15dp"
        />
    <TextView
        style="@style/TrackInformationStyleBlack"
        android:id="@+id/yearName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearName"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/albumName"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        />
    <TextView
        style="@style/TextViewStyleGray"
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/year"
        android:layout_marginTop="15dp"
        />
    <TextView
        style="@style/TrackInformationStyleBlack"
        android:id="@+id/genreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genreName"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/yearName"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        />
    <TextView
        style="@style/TextViewStyleGray"
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/genre"
        android:layout_marginTop="15dp"
        />
    <TextView
        style="@style/TrackInformationStyleBlack"
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countryName"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/genreName"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        />




</androidx.constraintlayout.widget.ConstraintLayout>