<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LinearLayoutStyle"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_gravity="top"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:iconGravity="textStart"
                app:iconTint="@color/black"/>

            <TextView
                style = "@style/SettingTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confguration_name"
                android:textSize="@dimen/text_size"
                android:fontFamily = "@font/ys_text_medium"
                android:paddingLeft="24dp"/>

        </androidx.appcompat.widget.Toolbar>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_setting"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/edges_padding_setting"
        android:paddingRight="@dimen/edges_padding_setting"

        >

        <TextView
            style="@style/SettingTextView"
            android:layout_width="wrap_content"
            android:text="@string/dark_theme"

            />

        <Switch
            android:id="@+id/switch_off"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:checked="false"
            android:gravity="left" />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/edges_padding_setting"
        android:paddingRight="@dimen/edges_padding_setting">

        <TextView
            style="@style/SettingTextView"
            android:layout_width="match_parent"
            android:text="@string/share"
            android:drawableEnd="@drawable/share"

            />
        <TextView
            style="@style/SettingTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/marginTop_setting"
            android:text="@string/help"
            android:drawableEnd="@drawable/group"

            />

        <TextView
            style="@style/SettingTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/marginTop_setting"
            android:text="@string/agreement"
            android:drawableEnd="@drawable/ahead"

            />











    </LinearLayout>





</LinearLayout>