<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingTop="@dimen/top_padding"
    android:paddingLeft="@dimen/edges_padding">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/top_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="28dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingRight="@dimen/edges_padding"
        >





        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="top"
            android:backgroundTint="@color/white"
            android:text="@string/search_name"
            android:textColor="@color/text"
            app:cornerRadius="@dimen/corner_radius"
            app:icon = "@drawable/search_1"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
           />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"
            android:layout_weight="5"
            android:backgroundTint="@color/white"
            android:text="@string/media_name"
            android:textColor="@color/text"
            app:cornerRadius="@dimen/corner_radius"
            app:icon = "@drawable/media2"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:layout_weight="5"
            android:backgroundTint="@color/white"
            android:text="@string/confguration_name"
            android:textColor="@color/text"
            app:cornerRadius="@dimen/corner_radius"
            app:icon = "@drawable/configure_3"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black"
            />



    </LinearLayout>


</LinearLayout>