<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="@dimen/imageView_layout"
        android:layout_height="@dimen/imageView_layout"
        android:scaleType="centerCrop"

        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="7dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/TrackNameStyle"
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trackName"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                style="@style/TrackInformationStyle"
                android:text="@string/trackAuthor"
                android:ellipsize="end"
                android:maxLines="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic__day"
                android:layout_gravity="center_vertical"
                />

            <TextView
                style="@style/TrackInformationStyle"
                android:id="@+id/trackTime"
                android:text="@string/trackTime"
                />



        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/arrowForward"
        android:src="@drawable/light_arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginBottom="8dp"/>

</LinearLayout>